tests/rosetta/transpiler/CPP/calkin-wilf-sequence.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:5:10: fatal error: boost/multiprecision/cpp_int.hpp: No such file or directory
    5 | #include <boost/multiprecision/cpp_int.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
